src/test/ui/did_you_mean/issue-42764.stderr
error[E0308]: mismatched types
  --> $DIR/issue-42764.rs:21:43
   |
21 |     this_function_expects_a_double_option(n);
   |                                           ^ expected enum `DoubleOption`, found usize
   |
   = note: expected type `DoubleOption<_>`
              found type `usize`
help: perhaps you meant to use a variant of the expected type
   |
21 |     this_function_expects_a_double_option(DoubleOption::FirstSome(n));
   |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^
21 |     this_function_expects_a_double_option(DoubleOption::AlternativeSome(n));
   |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

